 * Added support for adding multiple categories in one step, this is done by separating category names by the pipe character '|'.  For example to add category 'A' and 'B', add 'A|B'.
 * Added multiple bug actions in view_all_bug_page.php. 
 * Added a direct link, with a small icon, on each bug row, so that users on a selected project can switch directly to the bug_update_advanced_page. 
 * Added automatic defaults for $g_path and $g_absolute_path rather than dummy values.  This should avoid the need of redefining these values in custom_config_inc.php and also support multiple domains.
 * Added configuration flags ($g_show_queries_count and $g_show_queries_list) that track the executed queries and display their total count, unique queries count, and the actual list of queries executed.
 * Added more visual graph pages in summary_page.php. Caution, old versions of JPGraph may cause problems, use v1.6.3 or above if you can.

2002.05.19  -  0.17.3

 * Bumped version number.
 * Fixed problem with CSV not downloading.
 * Fixed no colors when using non-English languages (temporary fix).
 * Fixed bug_close to add bugnote.
 * Fixed file uploads to not show up for VIEWERS.
 * Modified core_API.php to always turn magic_quotes_runtime OFF.
 * Modified disk uploads to use the file_download.php script.
 * Modified bugnote last_modified query slightly.
 * Modified reporter and assign_to option lists.
 * Updated PHP and MySQL requirements.
 * Updated Norwegian, Russian, Danish and Dutch translations.
 * Added die to print_header_redirect().
 * Added russian_koi8 translation.
 * Added HTTP_POST_FILES to core_API.php.
 * Added check for empty bugnotes.
 * Removed view_csv_export_inc.php (unused).
 * Removed print_user_option_list() (unused).
 * Closed a security problem in account_update.php.

2002.05.12  -  0.17.2

 * Fixed error in set_project where setting a project would result in a loop.
 * Fixed account profiles to check for blank inputs.