@@ -70,10 +70,11 @@ Mantis ChangeLog
  * Replaced $g_<status>_color variables with $g_status_colors['<status color>'] array in the configuration.  For example, $g_new_color is replaced with $g_status_colors['new']. 
  * Added support for adding multiple categories in one step, this is done by separating category names by the pipe character '|'.  For example to add category 'A' and 'B', add 'A|B'.
  * Added multiple bug actions in view_all_bug_page.php. 
- * Added a direct link, with a small icon, on each bug row, so that users on a selected project can switch directly to the bug_update_advanced_page. 
+ * Added a direct link, with a small icon, on each bug row, so that users on a selected project can switch directly to the update bug page (simple/advanced depending on user preferences). 
  * Added automatic defaults for $g_path and $g_absolute_path rather than dummy values.  This should avoid the need of redefining these values in custom_config_inc.php and also support multiple domains.
  * Added configuration flags ($g_show_queries_count and $g_show_queries_list) that track the executed queries and display their total count, unique queries count, and the actual list of queries executed.
  * Added more visual graph pages in summary_page.php. Caution, old versions of JPGraph may cause problems, use v1.6.3 or above if you can.
+ * Added $g_default_notify_flags and $g_notify_flags which replace $g_notify_developers_on_new, $g_notify_on_new_threshold, and $g_notify_admin_on_new.  The old flags are no longer supported.  The new ones provide full control on who should be notified on each event/action.
 
 2002.05.19  -  0.17.3
 
